--- a/201712/src/main/resources/application.properties
+++ b/201712/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=sa
 spring.datasource.password=v*elocIpEd
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8084
+spring.data.rest.base-path=/api
