使用spring security去权限管理

--- a/201712/src/main/resources/application.properties
+++ b/201712/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.datasource.url=jdbc:sqlserver://192.168.200.13;databaseName=logindemo
+spring.datasource.url=jdbc:sqlserver://192.168.200.13;databaseName=2017
 spring.datasource.username=sa
 spring.datasource.password=v*elocIpEd
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 server.port=8084
+#与RepositoryRestResource相结合，自动生成models相应的REST api
 spring.data.rest.base-path=/api
+label.lastname=Last Name
+label.email=Email
+label.telephone=Telephone
+label.firstname=First Name
+label.add=Add a user
